Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8231321

compiler/codecache/stress/UnexpectedDeoptimizationAllTest.java failed assertion

XMLWordPrintable

    • b17
    • x86_64
    • windows

      The following test failed an assertion in the JDK14 CI:

      compiler/codecache/stress/UnexpectedDeoptimizationAllTest.java

      Here's a snippet from the log file:

      ----------System.out:(23/1409)*----------
      CompileCommand: dontinline compiler/codecache/stress/Helper$TestCase.method
      For random generator using seed: -3269928455469474852
      To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-3269928455469474852" to command line.
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/code/nmethod.cpp:1296
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/share/code/nmethod.cpp:1296), pid=3872, tid=19068
      # assert(!is_zombie()) failed: should not already be a zombie
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+16) (fastdebug build 14-ea+16-629)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+16-629, mixed mode, sharing, tiered, compressed oops, serial gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs\\scratch\\6\\hs_err_pid3872.mdmp
      #
      Unsupported internal testing APIs have been used.

      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_hotspot_compiler_all_gcs\\scratch\\6\\hs_err_pid3872.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(0/0)----------

            rehn Robbin Ehn
            dcubed Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: