8231321: compiler/codecache/stress/UnexpectedDeoptimizationAllTest.java failed assertion

Reviewed-by: thartmann, eosterlund